--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,4 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/springsecurity8?createDatabaseIfNotExist=true
-    username: root
-    password: 1234
-
-  jpa:
-    show-sql: true
-
-
 logging:
   level:
     org.springframework.jdbc.core: trace
-#    org.springframework.security: trace
-
-
-
-
-auth:
-  key: 12345
+    org.springframework.security: trace
